{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 5,
  "lineage": "c8b5e3ba-014e-67f6-79f7-a18e5a4af665",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-b774f9ca",
            "egress": [],
            "id": "acl-b774f9ca",
            "ingress": [],
            "owner_id": "094476559380",
            "subnet_ids": [
              "subnet-097f7555",
              "subnet-28f8f64f",
              "subnet-4c804342",
              "subnet-5d4f1263",
              "subnet-72b0693f",
              "subnet-a2190d8c"
            ],
            "tags": {
              "Name": "Default Network ACL"
            },
            "vpc_id": "vpc-31b7ed4b"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-e648e998",
            "id": "rtb-e648e998",
            "owner_id": "094476559380",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Default Route Table"
            },
            "vpc_id": "vpc-31b7ed4b"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094476559380:security-group/sg-7f125a2b",
            "egress": [],
            "id": "sg-7f125a2b",
            "ingress": [],
            "name": "default",
            "owner_id": "094476559380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-31b7ed4b"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094476559380:vpc/vpc-31b7ed4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-b774f9ca",
            "default_route_table_id": "rtb-e648e998",
            "default_security_group_id": "sg-7f125a2b",
            "dhcp_options_id": "dopt-7603c40c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-31b7ed4b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e648e998",
            "owner_id": "094476559380",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    }
  ]
}